--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
-    "@ionic/storage": "1.1.7",
+    "@ionic/storage": "^1.1.7",
+    "cordova-sqlite-storage": "^1.5.3",
     "ionic-angular": "2.0.1",
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
@@ -28,7 +29,8 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "1.0.0",
+    "@ionic/app-scripts": "^1.1.0",
+    "@types/request": "0.0.30",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
